--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ oauthlib==3.2.0
 Pillow==9.0.1
 psycopg2-binary==2.9.3
 pycparser==2.21
-pydotplus==2.0.2
-pygraphviz==1.9
+# pydotplus==2.0.2
+# pygraphviz==1.9
 PyJWT==2.3.0
 pyparsing==3.0.7
 python3-openid==3.2.0
